make a little more AOT friendly

--- a/src/Viam.Client/Viam.Client.csproj
+++ b/src/Viam.Client/Viam.Client.csproj
@@ -21,6 +21,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <IncludeSource>true</IncludeSource>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<IsAotCompatible>true</IsAotCompatible>
 
   </PropertyGroup>
 
@@ -30,6 +31,7 @@
 	<ItemGroup>
 		<PackageReference Include="System.Memory" Version="4.6.3" />
 		<PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
+		<PackageReference Include="System.Text.Json" Version="9.0.5" />
 	</ItemGroup>
 	<ItemGroup>
     <None Include="runtimes\win-x64\native\libviam_rust_utils.dll">
